[gd_scene load_steps=3 format=3 uid="uid://db0shidkbst7d"]

[ext_resource type="Script" path="res://Scenes/RequestsWindow/Categories/charges.gd" id="1_3pwwg"]
[ext_resource type="PackedScene" uid="uid://dbt8fjrt4x517" path="res://Scenes/RequestsWindow/RequestPerformer.tscn" id="1_w3sfo"]

[node name="Charges" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3pwwg")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 704.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 50

[node name="GET" type="TabBar" parent="TabContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/GET"]
layout_mode = 0
offset_right = 576.0
offset_bottom = 635.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/GET/ScrollContainer"]
layout_mode = 2

[node name="ShowAllCharges" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Show all charges"

[node name="ShowChargeById" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Show charge by ID"

[node name="ChargeId" type="LineEdit" parent="TabContainer/GET"]
layout_mode = 0
offset_left = 424.0
offset_top = 67.0
offset_right = 491.063
offset_bottom = 98.0
theme_override_font_sizes/font_size = 32
placeholder_text = "id:"

[node name="POST" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/POST/ScrollContainer"]
layout_mode = 2

[node name="AddCharge" type="Button" parent="TabContainer/POST/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add charge"

[node name="Amount" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 424.0
offset_top = 136.0
offset_right = 594.0
offset_bottom = 189.0
theme_override_font_sizes/font_size = 32
placeholder_text = "amount:"
expand_to_text_length = true

[node name="ExpenseItemId" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 416.0
offset_top = 224.0
offset_right = 707.0
offset_bottom = 277.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Expense item id:"
expand_to_text_length = true

[node name="PUT" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 712.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PUT/ScrollContainer"]
layout_mode = 2

[node name="UpdateCharge" type="Button" parent="TabContainer/PUT/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Update charge"

[node name="Amount" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 424.0
offset_top = 176.0
offset_right = 596.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Amount:"
expand_to_text_length = true

[node name="ExpenseItemId" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 416.0
offset_top = 232.0
offset_right = 544.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Expense item id:"
expand_to_text_length = true

[node name="ChargeId" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 424.0
offset_top = 120.0
offset_right = 617.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Charge id:"
expand_to_text_length = true

[node name="DELETE" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/DELETE"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 712.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/DELETE/ScrollContainer"]
layout_mode = 2

[node name="DeleteCharge" type="Button" parent="TabContainer/DELETE/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Delete charge"

[node name="ChargeId" type="LineEdit" parent="TabContainer/DELETE"]
layout_mode = 0
offset_left = 464.0
offset_top = 88.0
offset_right = 592.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Charge id:"
expand_to_text_length = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 704.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_font_sizes/normal_font_size = 16
scroll_following = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1192.0
offset_top = 592.0
offset_right = 1272.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 64
text = "<"

[node name="Request" parent="." instance=ExtResource("1_w3sfo")]

[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/ShowAllCharges" to="." method="_on_show_all_charges_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/ShowChargeById" to="." method="_on_show_charge_by_id_button_up"]
[connection signal="button_up" from="TabContainer/POST/ScrollContainer/VBoxContainer/AddCharge" to="." method="_on_add_charge_button_up"]
[connection signal="button_up" from="TabContainer/PUT/ScrollContainer/VBoxContainer/UpdateCharge" to="." method="_on_update_charge_button_up"]
[connection signal="button_up" from="TabContainer/DELETE/ScrollContainer/VBoxContainer/DeleteCharge" to="." method="_on_delete_charge_button_up"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
[connection signal="response_ready" from="Request" to="." method="_on_request_response_ready"]
